# QueryWhisperer

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt  vn.py
notebooks/: setup_db.ipynb
